--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Веб-сайт, созданный для прохождения тестового задания"
+      content="Test case: working with randomusers API"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Тестовое задание на позицию Junior Front-end dev</title>
+    <title>Working with randomusers API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
